kube_yamls/quickstart/quickstart-prd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart-prd
  namespace: quickstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prd-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prd-server
    spec:
      securityContext:
        # Note: fsGroup may be customized for a bit of better
        # filesystem security on the shared host
        fsGroup: 1000
        runAsUser: 1000
        ### runAsGroup: 1000
      containers:
        - name: quickstart
          image: samuelcavalcanti/quickstart:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "100m"
            requests:
              memory: "200Mi"
              cpu: "50m"
          ports:
            - name: httpport
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/hello"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/hello"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
